# turbo-octo-broccoli

./: .cursorignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  SECURITY.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/commands/: code-implement.md
.cursor/rules/: core-agent.mdc  core-git.mdc  core-subagent.mdc  core-tools.mdc  data-cursor-name.mdc
.github/commands/: code-implement.md
.github/instructions/: code-py.md  core-git.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e5f6a7b8c9d0_add_grammar_set_lexis_set.py
app/core/: auth.py  config.py  falkordb.py  fsrs.py  init_english_profile.py  kuzu.py  seed_inventory.py  sqlite.py
app/crud/english/inventory/: cefr.py  curriculum.py  grammar.py  grammar_item.py  grammar_set.py  grammatical_set.py  item.py  kice.py  lexical_set.py  lexis.py  lexis_item.py  lexis_item_write.py  lexis_set.py  task.py  task_item.py  task_links.py  testlet.py  vocab_list.py
app/crud/english/records/: acquisition.py  learner_item.py  learner_proficiency.py  needs_analysis.py  practice.py  recall_event.py  source.py  task_outcome.py  writing_assessment.py
app/models/english/: acquisition.py  curriculum.py  enums.py  error_prior.py  essay_outcome.py  exam_period.py  fsrs_config.py  grammar_profile.py  grammar_set.py  learner_item.py  learner_proficiency.py  learner_profile.py  lesson_log.py  lexis_corpus_freq.py  lexis_profile.py  needs_analysis.py  practice.py  question_log.py  recall_event.py  response_log.py  review_schedule.py  source.py  task_outcome.py  writing_assessment.py
app/routers/admin/: __init__.py  upload.html  upload.py  upload_lexis.py  upload_task.py
app/routers/english/: __init__.py
app/routers/english/inventory/: __init__.py  grammar.py  grammar_item.py  grammar_set.py  grammatical_set.py  lexis.py  lexis_set.py  task.py  vocab_list.py
app/routers/english/records/: __init__.py  acquisition.py  learner_proficiency.py  lexis_review_schedule.py  needs_analysis.py  practice.py  review_schedule.py  task_outcome.py  writing_assessment.py
app/schemas/english/inventory/: curriculum.py  grammar_set.py  task.py  (+3 more)
app/scripts/: _item_builders.py  _lexis_item_cli.py  _llm_opt5.py  _task_long_passage.py  _task_source_processor.py  extract_english_passages.py  extract_kice_reading.py  fill_kice_answers.py  fill_kice_text.py  init_chunk.py  init_english_profile.py  init_grammar_item.py  init_grammar_unit.py  init_lexis_item.py  init_task.py  init_testlet.py  tag_cefr.py  tag_grammar.py  tag_lexis.py
app/services/english/: grammar_session.py
data/common/: concepts.toml  link_types.toml  object_types.toml
docs/: CONTEXT.md  RULES.md  RULES_DIGEST.md  TODO.md  VSCODE_SETTINGS_AUDIT.md
tests/: test_english.py  test_english_inventory.py  test_knowledge.py
(+1 files in other folders)
